==> Mazsi04/Arm_hazi_1.0/stm32f429-en futo kod/STM32CubeIDE/Application/User/cc1101.c <==
#include <main.h>
#include "cc1101.h"
#define GDO0 GDO0_Pin
#define GDO0_PORT GPIOG
#define SPI1_NSS GPIO_PIN_8
#define SPI1_SCK GPIO_PIN_10
#define SPI1_MISO GPIO_PIN_11
#define SPI1_MOSI GPIO_PIN_12
#define GPIO GPIOC
#define hspi &hspi3
#define bitRead(value, bit) (((value) >> (bit)) & 0x01)
#define   WRITE_BURST       0x40            //write burst
#define   READ_SINGLE       0x80            //read single
#define   READ_BURST        0xC0            //read burst
#define   BYTES_IN_RXFIFO   0x7F            //byte number in RXfifo
#define   max_modul 6

uint8_t SpiReadStatus(uint8_t addr)
{
  uint8_t value,temp;
  //SpiStart();
  temp = addr | READ_BURST;
  //digitalWrite(SS_PIN, LOW);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,RESET);
  //while(digitalRead(MISO_PIN));
  while(HAL_GPIO_ReadPin(GPIO,SPI1_MISO));
  //SPI.transfer(temp);
  spi_transfer(temp);
  //value=SPI.transfer(0);
  value = spi_transfer( 0 );
  //digitalWrite(SS_PIN, HIGH);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
  //SpiEnd();
  return value;
}

void SpiWriteReg(uint8_t addr, uint8_t value)
{
  //SpiStart();
  //digitalWrite(SS_PIN, LOW);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,RESET);
  //while(digitalRead(MISO_PIN));
  while(HAL_GPIO_ReadPin(GPIO,SPI1_MISO));
  //SPI.transfer(addr);
  spi_transfer( addr );
  //SPI.transfer(value);
  spi_transfer(value);
  //digitalWrite(SS_PIN, HIGH);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
  //SpiEnd();
}

void Reset (void)
{
	//digitalWrite(SS_PIN, LOW);
	HAL_GPIO_WritePin(GPIO,SPI1_NSS,RESET);
	//delay(1);
	HAL_Delay(1);
	//ddigitalWrite(SS_PIN, HIGH);
	HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
	//delay(1);
	HAL_Delay(1);
	//digitalWrite(SS_PIN, LOW);
	HAL_GPIO_WritePin(GPIO,SPI1_NSS,RESET);
	//while(digitalRead(MISO_PIN));
	//HAL_StatusTypeDef
	while(HAL_GPIO_ReadPin(GPIO,SPI1_MISO));
	//SPI.transfer(CC1101_SRES);
	spi_transfer(CC1101_SRES);
	//while(digitalRead(MISO_PIN));
	while(HAL_GPIO_ReadPin(GPIO,SPI1_MISO));
	//digitalWrite(SS_PIN, HIGH);
	HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
}

void Init(void)
{
  //setSpi();
  //SpiStart();                   //spi initialization
  //digitalWrite(SS_PIN, HIGH);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
  //digitalWrite(SCK_PIN, HIGH);
  HAL_GPIO_WritePin(GPIO,SPI1_SCK,SET);
  //digitalWrite(MOSI_PIN, LOW);
  HAL_GPIO_WritePin(GPIO,SPI1_MOSI,RESET);
  Reset();                    //CC1101 reset
  RegConfigSettings(); //még nincs megírva           //CC1101 register config
  //SpiEnd();
}

void SpiWriteBurstReg(uint8_t addr, uint8_t *buffer, uint8_t num)
{
  uint8_t i, temp;
  //SpiStart();
  temp = addr | WRITE_BURST;
  //digitalWrite(SS_PIN, LOW);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,RESET);
  //while(digitalRead(MISO_PIN));
  while(HAL_GPIO_ReadPin(GPIO,SPI1_MISO));
  //SPI.transfer(temp);
  spi_transfer(temp);
  for (i = 0; i < num; i++)
  {
  //SPI.transfer(buffer[i]);
	  spi_transfer( buffer[i]);
  }
  //digitalWrite(SS_PIN, HIGH);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
  //SpiEnd();
}

void SpiStrobe(uint8_t strobe)
{
  //SpiStart();
  //digitalWrite(SS_PIN, LOW);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,RESET);
  //while(digitalRead(MISO_PIN));
  while(HAL_GPIO_ReadPin(GPIO,SPI1_MISO));
  //SPI.transfer(strobe);
  spi_transfer( strobe );
  //digitalWrite(SS_PIN, HIGH);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
  //SpiEnd();
}

uint8_t SpiReadReg(uint8_t addr)
{
	uint8_t temp, value;
  //SpiStart();
  temp = addr| READ_SINGLE;
  //digitalWrite(SS_PIN, LOW);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,RESET);
  //while(digitalRead(MISO_PIN));
  while(HAL_GPIO_ReadPin(GPIO,SPI1_MISO));
  //SPI.transfer(temp);
  spi_transfer( temp );
  //value=SPI.transfer(0);
  value = spi_transfer( 0 );
  //digitalWrite(SS_PIN, HIGH);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
  //SpiEnd();
  return value;
}

void SpiReadBurstReg(uint8_t addr, uint8_t *buffer, uint8_t num)
{
  uint8_t i,temp;
  //SpiStart();
  temp = addr | READ_BURST;
  //digitalWrite(SS_PIN, LOW);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,RESET);
  //while(digitalRead(MISO_PIN));
  while(HAL_GPIO_ReadPin(GPIO,SPI1_MISO));
  //SPI.transfer(temp);
  spi_transfer( temp );
  for(i=0;i<num;i++)
  {
  //buffer[i]=SPI.transfer(0);
  buffer[i] = spi_transfer( 0 );
  }
  //digitalWrite(SS_PIN, HIGH);
  HAL_GPIO_WritePin(GPIO,SPI1_NSS,SET);
  //SpiEnd();
}

uint8_t CheckReceiveFlag(void)
{
  if(trxstate!=2){SetRx();}
	if(HAL_GPIO_ReadPin(GDO0_PORT,GDO0))			//receive data
	{
		while (HAL_GPIO_ReadPin(GDO0_PORT,GDO0));
		return 1;
	}
	else							// no data
	{
		return 0;
	}
}
