==> Pablo-Ortiz-Lopez/GarageRemote/firmware/src/CC1101.cpp <==
#include "CC1101.h"
#include <Arduino.h>
#include <SPI.h>
#define WRITE_BURST 0x40     // write burst
#define READ_SINGLE 0x80     // read single
#define READ_BURST 0xC0      // read burst
#define BYTES_IN_RXFIFO 0x7F // byte number in RXfifo
#define max_modul 6

void CC1101::Reset(void) {
    digitalWrite(SS_PIN, LOW);
    delay(1);
    digitalWrite(SS_PIN, HIGH);
    delay(1);
    digitalWrite(SS_PIN, LOW);
    while (digitalRead(MISO_PIN)){}
    SPI.transfer(CC1101_SRES);
    while (digitalRead(MISO_PIN)){}
    digitalWrite(SS_PIN, HIGH);
}

void CC1101::Init(void) {
    SpiStart(); // spi initialization
    digitalWrite(SS_PIN, HIGH);
    digitalWrite(SCK_PIN, HIGH);
    digitalWrite(MOSI_PIN, LOW);
    Reset();             // CC1101 reset
    RegConfigSettings(); // CC1101 register config
    SpiEnd();
}

void CC1101::SpiWriteReg(byte addr, byte value) {
    SpiStart();
    digitalWrite(SS_PIN, LOW);
    while (digitalRead(MISO_PIN)){}
    SPI.transfer(addr);
    SPI.transfer(value);
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
}

void CC1101::SpiWriteBurstReg(byte addr, byte *buffer, byte num) {
    byte i, temp;
    SpiStart();
    temp = addr | WRITE_BURST;
    digitalWrite(SS_PIN, LOW);
    while (digitalRead(MISO_PIN)){}
    SPI.transfer(temp);
    for (i = 0; i < num; i++) {
        SPI.transfer(buffer[i]);
    }
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
}

void CC1101::SpiStrobe(byte strobe) {
    SpiStart();
    digitalWrite(SS_PIN, LOW);
    while (digitalRead(MISO_PIN)){}
    SPI.transfer(strobe);
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
}

byte CC1101::SpiReadReg(byte addr) {
    byte temp, value;
    SpiStart();
    temp = addr | READ_SINGLE;
    digitalWrite(SS_PIN, LOW);
    while (digitalRead(MISO_PIN)){}
    SPI.transfer(temp);
    value = SPI.transfer(0);
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
    return value;
}

void CC1101::SpiReadBurstReg(byte addr, byte *buffer, byte num) {
    byte i, temp;
    SpiStart();
    temp = addr | READ_BURST;
    digitalWrite(SS_PIN, LOW);
    while (digitalRead(MISO_PIN)){}
    SPI.transfer(temp);
    for (i = 0; i < num; i++) {
        buffer[i] = SPI.transfer(0);
    }
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
}

byte CC1101::SpiReadStatus(byte addr) {
    byte value, temp;
    SpiStart();
    temp = addr | READ_BURST;
    digitalWrite(SS_PIN, LOW);
    while (digitalRead(MISO_PIN)){}
    SPI.transfer(temp);
    value = SPI.transfer(0);
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
    return value;
}

byte CC1101::CheckReceiveFlag(void) {
    if (trxstate != 2) {
        SetRx();
    }
    if (digitalRead(GDO0)) // receive data
    {
        while (digitalRead(GDO0))
            ;
        return 1;
    } else // no data
    {
        return 0;
    }
}
